# Arkanoid

./: .gitignore  CMakeLists.txt  GUIA_RAYLIB.md  LICENSE  Makefile  README.md  install_raylib.sh  readme.md
assets/shaders/: blur.fs  invert.fs
src/: bot.c  bot.h  brick.c  brick.h  defs.h  game_defs.h  main.c  qtable_io.c  qtable_io.h  sound.c  sound.h
